Finished KODI part, testing required for linux systems